--- a/colour.css
+++ b/colour.css
@@ -5,7 +5,7 @@ color sets the colour of the text on the page.
  */
 
 html, body{
-  background-color: #BF97DB;
+  background-color: #DCC2EE;
   color: #111111;
 }
 
