--- a/colour.css
+++ b/colour.css
@@ -1,81 +1,57 @@
-/*
-background color sets the colour of the page itself.
-
-color sets the colour of the text on the page.
- */
-
 html, body{
   background-color: #DCC2EE;
   color: #111111;
 }
 
-/*
-h1 is the bold "Your Name" at the top of the page.
- */
+/* name at top */
 
 h1{
 color: #111111;
 }
 
-/*
-h3 is used for the subheadings
- */
+/* subheadings */
 
 h3{
   color: #111111;
 }
 
-/*
-h4 is used for the dates in this template
- */
+/* dates */
 
 h4{
   color: #111111;
 }
 
-/*
-This sets the colour of the links on your page
- */
+/* links */
 
 a, a:visited {
   color: #000000;
 }
 
-/*
-This sets the colour of the link when you hover over it
- */
+/* link hover */
 
 a:hover {
   color: #483D8B;
 }
 
-/*
-This sets the colour of the circle around each of the contact icons
- */
+/* circle on contact */
 
 .fab, .fas{
   background-color: #333333;
 }
 
-/*
-This sets the colour of icon itself
- */
+/* icon on contact */
 
 a > .fab, a > .fas{
   color: #eeeeee;
 }
 
-/*
-This sets the colour of the circle around the icon when you hover over it
- */
+/* circle hover */
 
 .fab:hover, .fas:hover{
   background-color: #483D8B;
 }
 
-/*
-This sets the colour of icon itself when you hover over it
- */
+/* icon hover */
 
 a > .fab:hover, a > .fas:hover{
   color: #eeeeee;
