--- a/styles.css
+++ b/styles.css
@@ -128,11 +128,11 @@ a > .fab, a > .fas{
 
 /* Stuff on links pages */
 
-#links {
+#work-links {
   text-decoration: none;
   color: #111111;
 }
 
-#links:hover {
+#work-links:hover {
   color:#535151
 }
