--- a/styles.css
+++ b/styles.css
@@ -128,11 +128,11 @@ a > .fab, a > .fas{
 
 /* Stuff on links pages */
 
-#work-links a{
+#links li a{
   text-decoration: none;
   color: #111111;
 }
 
-#work-links:hover {
+#links li a:hover {
   color:#535151
 }
