--- a/styles.css
+++ b/styles.css
@@ -49,10 +49,17 @@ h3 {
 }
 
 h4 {
-	text-align: left;
+	text-align: center;
 	text-transform: uppercase;
 	font-weight: 400;
 	font-size: 23px;
+}
+
+h5 {
+	text-align: left;
+	text-transform: uppercase;
+	font-weight: 400;
+	font-size: 20px;
 }
 
 li {
